# narratives-ai-agent

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  example.py  explore_moni_api.py  pyproject.toml  test_enhanced_crypto.py  test_free_integrations.py  test_setup.py
src/daily_alpha/: __init__.py  config.py  server.py
src/daily_alpha/aggregators/: __init__.py  crypto_trends.py  daily_briefing.py  tech_trends.py
src/daily_alpha/sources/: __init__.py  awesome_mcp.py  coingecko.py  defillama.py  github_trending.py  moni.py
src/daily_alpha/storage/: __init__.py
